--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -24,7 +24,7 @@ jobs:
           pip install requests
 
       - name: Run script
-        run: python update_readme.py
+        run: python .github/scripts/update_readme.py
 
       - name: Commit changes
         run: |
