--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -24,6 +24,8 @@ jobs:
           pip install requests
 
       - name: Run script
+        env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: python .github/scripts/update_readme.py
 
       - name: Commit changes
